WSS-520 Bugfix z-index

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -581,4 +581,6 @@ select:invalid {
 .form__extent {
 	margin-top: -0.5em;
 	margin-bottom: -3em;
+	position: relative;
+	z-index: 100;
 }
